# systemic-tau-platform

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATION.cff.metadata.json  CONTRIBUTING.md  Dockerfile  FREEZE.md  README.md  README.md.metadata.json  SECURITY.md  add_disclaimer.py  add_disclaimer.py.metadata.json  generate_domains.py  generate_domains.py.metadata.json  packages.txt  pyproject.toml  release_notes.md.metadata.json  requirements.txt  scratch_test_debugger.py  scratch_test_debugger.py.metadata.json  test_imports.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py  locales.py  locales.py.metadata.json  streamlit_app.py
app/assets/: style.css
app/components/: __init__.py  bootstrap.py  hero.py  illustrations.py  theme.py  theme.py.metadata.json  ui.py
app/pages/: 1_Fundamentos.py  2_Matematica.py  2_Migracion_Paradigma.py  3_Dominios.py  3_Matematica.py  4_Dominios.py  4_Laboratorio.py  5_Laboratorio.py  5_Ruta_Aprendizaje.py  6_Evidencia.py  7_Docencia.py  8_Materiales.py  8_Planes.py  8_Ruta_Aprendizaje.py  9_About_Legal.py  9_Migracion_Paradigma.py  9_Migracion_Paradigma.py.metadata.json
content/dominios/: cardiologia.md  clima.md  ecologia.md  educacion.md  epidemiologia.md  finanzas.md  fisiologia.md  neurociencia.md  social.md
content/fundamentos/: 01_tau.md  02_ews_limits.md  03_recd_levels.md  04_excess3.md  05_csd.md  06_filosofia.md
content/handouts/: 01_guia_rapida.md  02_manual_usuario.md  03_teoria_tau_recd.md  04_matematica_practica.md  (+6 more)
docs/: ARCHITECTURE.md  DATASETS.md  DEPLOY.md  ENGINEERING.md  I18N_REVIEW.md  LAB_FLOW.md  SPEC.md
scripts/: download_epi_eco.py  download_epi_eco.py.metadata.json  download_finance_sp500.py  download_finance_sp500.py.metadata.json  download_neuro_chbmit.py  download_neuro_chbmit.py.metadata.json  download_physionet.py  download_physionet.py.metadata.json  export_sddb_samples.py  smoke_apptest.py
tests/: test_adapters.py  test_handouts.py  test_i18n.py  test_pipeline.py  test_public_limits.py  test_tda_breathing.py
(+132 files in other folders)
