[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "systemic-tau-platform"
version = "1.0.0"
description = "Systemic Tau Educational & Research Platform — Tau Sistémica + RECD"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Johel Padilla-Villanueva", email = "johel.padilla@upr.edu" },
]
keywords = [
  "systemic-tau",
  "recd",
  "early-warning-signals",
  "complex-systems",
  "ordinal-patterns",
  "streamlit",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "streamlit>=1.32",
  "streamlit-extras>=0.4",
  "plotly>=5.18",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "numba>=0.58",
  "scikit-learn>=1.3",
  "networkx>=3.1",
  "markdown>=3.5",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pydantic>=2.5",
  "reportlab>=4.0",
  "Pillow>=10.0",
  "openpyxl>=3.1",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
tda = ["ripser>=0.6", "persim>=0.3"]
full = [
  "systemic-tau-platform[tda]",
  "streamlit-aggrid>=0.3",
  "weasyprint>=60.0",
  "wfdb>=4.1",
  "xarray>=2023.1",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "mypy>=1.7",
  "pre-commit>=3.5",
]
studio = [
  "systemictau>=4.5",
  "nested-recd>=0.1",
]

[project.scripts]
stp = "stp.cli:main"
stp-lab = "stp.cli:run_streamlit"

[project.urls]
Homepage = "https://github.com/johelpadilla/systemic-tau-platform"
Documentation = "https://github.com/johelpadilla/systemic-tau-platform/docs"
Research = "https://github.com/johelpadilla/cctp-sddb-systemic-tau"

[tool.hatch.build.targets.wheel]
packages = ["src/stp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
